# regcomms

./: .gitignore  Cargo.toml  Notes.txt  gen_lsm.sh  lsm6dsv.yaml  test.sh
lsm6dsv/: func_cfg_access.rs  mod.rs  pin_ctrl.rs
quantum_flux_sensor/: Cargo.toml  build.rs  quantum_flux_sensor.yaml
quantum_flux_sensor/src/: lib.rs
quantum_flux_sensor/src/handwritten/: mod.rs
quantum_flux_sensor2/: Cargo.toml
quantum_flux_sensor2/src/: boson_config.rs  boson_data.rs  fifo_config.rs  lepton_config.rs  lepton_data.rs  lib.rs  power_mode.rs  quark_config.rs  quark_data.rs  who_am_i.rs
reg_comms/: Cargo.toml
reg_comms/src/: lib.rs
reg_comms_gen/: Cargo.toml
reg_comms_gen/src/: example_mod.rs  field_spec.rs  main.rs  opts.rs  peripheral_spec.rs  register_spec.rs
regcomms/: Cargo.toml  LICENSE.txt  README.txt
regcomms/src/: blockon.rs  lib.rs
regcomms/src/i2c/: mod.rs
regcommsgen/: Cargo.toml
regcommsgen/src/: access_proc.rs  field_spec.rs  lib.rs  peripheral_spec.rs  register_spec.rs  struct_spec.rs  trait_member.rs
regcommsgen_driver/: Cargo.toml
regcommsgen_driver/src/: main.rs  opts.rs
src/: endian.rs  example.rs  field_spec.rs  main.rs  opts.rs  peripheral_spec.rs  register_spec.rs
test_crate/: Cargo.toml
test_crate/src/: lib.rs
