[package]
name = "quantum_flux_sensor"
edition = "2024"
version = "0.1.0"
build = "build.rs"


[build-dependencies]
regcommsgen = { path = "../regcommsgen" }

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
regcomms = { path = "../regcomms" }
spin = { version = "0.10.0", features = ["once"] }
