[package]
name = "regcomms"
license-file = "LICENSE.txt"
readme = "README.txt"
description = "Supporting traits for crates created by regcommsgen"
repository = "https://github.com/ajwock/regcomms.git"

authors = ["Andrew Wock"]
version = "0.1.0"
edition = "2024"

keywords = ["no_std", "embedded"]
categories = ["embedded"]

[features]
embedded-hal = ["dep:embedded-hal"]
embedded-hal-async = ["dep:embedded-hal-async", "dep:futures"]

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }
futures = { version = "0.3.31", features = ["async-await", "executor"], optional = true }
