[package]
name = "regcommsgen"
license-file = "LICENSE.txt"
readme = "README.txt"
description = "Code generator for peripherals with registers over embedded comms"
repository = "https://github.com/ajwock/regcomms.git"

authors = ["Andrew Wock"]
version = "0.1.0"
edition = "2024"

keywords = ["no_std", "embedded"]
categories = ["embedded"]

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
stringcase = "0.4.0"
