[package]
name = "test_crate"
version = "0.1.0"
edition = "2024"



[dependencies]
regcomms = { path = "../regcomms" }
quantum_flux_sensor = { path = "../quantum_flux_sensor" }
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"

[workspace]
